<resources>
    <string name="app_name">Plano</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PATOGAS SRL</string>
    <string name="nav_header_subtitle">Al servicio del pueblo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="diseño">diseño</string>
    <string name="hint_duenio">Dueño de Vivienda</string>
    <string name="hint_barrio">Barrio</string>
    <string name="hint_ciudad">Ciudad</string>
    <string name="hint_calle">Calle</string>
    <string name="hint_nro_casa">Nro. Casa</string>
    <string name="text_save">GUARDAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mensaje_recycler">mensaje_recycler</string>
    <string name="invoice_number">NRO. DE COTIZACION : 000</string>
    <string name="invoice_date">FECHA DE COTIZACION : </string>
    <string name="company">EMPRESA : </string>
    <string name="client_title">DATOS DEL CLIENTE : </string>
    <string name="client_name">NOMBRE : </string>

    <string name="detail_code">Codigo</string>
    <string name="detail_description">Descripcion</string>
    <string name="detail_amount">Cantidad</string>
    <string name="detail_price">Precio</string>
    <string name="detail_total">Precio Total</string>
    <string name="invoice_subtotal">Sub-Total</string>
    <string name="invoice_tax">Impuesto</string>
</resources>
