<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViviendaFragment">

    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DATOS DE VIVIENDA"
                android:textAlignment="center"
                android:textSize="20dp"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AlertDialog.AppCompat"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/duenio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_duenio"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AlertDialog.AppCompat"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/barrio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_barrio"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AlertDialog.AppCompat"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ciudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_ciudad"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AlertDialog.AppCompat"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/calle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_calle"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AlertDialog.AppCompat"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nro_casa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nro_casa"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/create_vivienda_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_save"
                android:theme="@style/AppTheme"
                />
        </LinearLayout>
    </ScrollView>
</FrameLayout>